--- a/proyecto/app/views/documents/show.html.erb
+++ b/proyecto/app/views/documents/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Text:</strong>
-  <%= @document.text %>
+  <%= markdown(@document.text).html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_document_path(@document) %> |
