--- a/proyecto/app/views/categories_documents/index.html.erb
+++ b/proyecto/app/views/categories_documents/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Categories Document', new_categories_document_path %>
+<%= link_to 'New Categories Document', new_categories_document_path, {:class => "btn btn-success"} %>
