--- a/proyecto/app/views/categories_documents/show.html.erb
+++ b/proyecto/app/views/categories_documents/show.html.erb
@@ -10,5 +10,5 @@
   <%= @categories_document.document %>
 </p>
 
-<%= link_to 'Edit', edit_categories_document_path(@categories_document) %> |
-<%= link_to 'Back', categories_documents_path %>
+<%= link_to 'Edit', edit_categories_document_path(@categories_document), {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', categories_documents_path, {:class => "btn btn-default"} %>
