--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Document', new_document_path %>
+<%= link_to 'New Document', new_document_path, {:class => "btn btn-success"} %>
