--- a/proyecto/app/views/categories/index.html.erb
+++ b/proyecto/app/views/categories/index.html.erb
@@ -23,5 +23,5 @@
 </table>
 
 <br>
+<%= link_to 'New Category', new_category_path, {:class => "btn btn-success"} %>
 
-<%= link_to 'New Category', new_category_path %>
