--- a/proyecto/app/views/documents/show.html.erb
+++ b/proyecto/app/views/documents/show.html.erb
@@ -10,5 +10,5 @@
   <%= markdown(@document.text).html_safe %>
 </p>
 
-<%= link_to 'Edit', edit_document_path(@document) %> |
-<%= link_to 'Back', documents_path %>
+<%= link_to 'Edit', edit_document_path(@document), {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', documents_path, {:class => "btn btn-default"} %>
