--- a/proyecto/app/views/layouts/application.html.erb
+++ b/proyecto/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
         <p class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <%= link_to content_tag("span", " Edit profile", :class => 'glyphicon glyphicon-edit'), edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to content_tag("span", " Log out", :class => 'glyphicon glyphicon-log-out'), destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+          <%= link_to content_tag("span", " Sign up", :class => 'glyphicon glyphicon-user'), new_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to content_tag("span", " Login", :class => 'glyphicon glyphicon-log-in'), new_user_session_path, :class => 'navbar-link'  %>
         <% end %>
         </p>
       </div>
