documents public feature added

--- a/proyecto/app/views/documents/_form.html.erb
+++ b/proyecto/app/views/documents/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :text %>
   </div>
 
+  <div class="field">
+    <%= f.label :public %>
+    <%= f.check_box :public %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
