--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Public</th>
       <th>Text</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @documents.each do |document| %>
       <tr>
         <td><%= document.title %></td>
+        <td><%= document.public %></td>
         <td><%= markdown(document.text).html_safe %></td>
         <td><%= link_to 'Show', document %></td>
         <td><%= link_to 'Edit', edit_document_path(document) %></td>
