--- a/proyecto/app/views/categories_documents/show.html.erb
+++ b/proyecto/app/views/categories_documents/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @categories_document.category %>
+  <%= @categories_document.category.title %>
 </p>
 
 <p>
   <strong>Document:</strong>
-  <%= @categories_document.document %>
+  <%= @categories_document.document.title %>
 </p>
 
 <%= link_to 'Edit', edit_categories_document_path(@categories_document), {:class => "btn btn-primary"} %> |
