--- a/proyecto/app/views/categories_documents/edit.html.erb
+++ b/proyecto/app/views/categories_documents/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', categories_document: @categories_document %>
 
 <%= link_to 'Show', @categories_document, {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', categories_documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', categories_documents_path, {:class => "btn btn-danger"} %>
