--- a/proyecto/app/views/categories_documents/new.html.erb
+++ b/proyecto/app/views/categories_documents/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', categories_document: @categories_document %>
 
-<%= link_to 'Back', categories_documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', categories_documents_path, {:class => "btn btn-danger"} %>
