--- a/proyecto/app/views/categories_documents/show.html.erb
+++ b/proyecto/app/views/categories_documents/show.html.erb
@@ -2,13 +2,13 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @categories_document.category %>
+  <%= @categories_document.category.title %>
 </p>
 
 <p>
   <strong>Document:</strong>
-  <%= @categories_document.document %>
+  <%= @categories_document.document.title %>
 </p>
 
 <%= link_to 'Edit', edit_categories_document_path(@categories_document), {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', categories_documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', categories_documents_path, {:class => "btn btn-danger"} %>
