--- a/proyecto/app/views/categories/edit.html.erb
+++ b/proyecto/app/views/categories/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', category: @category %>
 
 <%= link_to 'Show', @category, {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', categories_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', categories_path, {:class => "btn btn-danger"} %>
