--- a/proyecto/app/views/categories/new.html.erb
+++ b/proyecto/app/views/categories/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', category: @category %>
 
-<%= link_to 'Back', categories_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', categories_path, {:class => "btn btn-danger"} %>
