--- a/proyecto/app/views/documents/edit.html.erb
+++ b/proyecto/app/views/documents/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', document: @document %>
 
 <%= link_to 'Show', @document, {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', documents_path, {:class => "btn btn-danger"} %>
