--- a/proyecto/app/views/documents/new.html.erb
+++ b/proyecto/app/views/documents/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', document: @document %>
 
-<%= link_to 'Back', documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', documents_path, {:class => "btn btn-danger"} %>
