--- a/proyecto/app/views/documents/show.html.erb
+++ b/proyecto/app/views/documents/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_document_path(@document), {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', documents_path, {:class => "btn btn-default"} %>
+<%= link_to 'Back', documents_path, {:class => "btn btn-danger"} %>
