--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -17,7 +17,19 @@
       <tr>
         <td><%= document.title %></td>
         <td><%= document.public %></td>
-        <td><%= markdown(document.text).html_safe %></td>
+
+
+
+        <% if document.text.length > 20 %>
+          <td><%=  markdown(document.text[0, 20]).html_safe %></td>
+        <% else %>
+          <td><%= markdown(document.text).html_safe %></td>
+        <% end %>
+
+
+
+
+
         <td><%= link_to 'Show', document %></td>
         <td><%= link_to 'Edit', edit_document_path(document) %></td>
         <td><%= link_to 'Destroy', document, method: :delete, data: { confirm: 'Are you sure?' } %></td>
