first try of implement permission list

--- a/proyecto/app/views/documents/edit_permissions.html.erb
+++ b/proyecto/app/views/documents/edit_permissions.html.erb
@@ -1,15 +1,4 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @document.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= markdown(@document.text).html_safe %>
-</p>
-
 <table class ="table">
   <thead>
     <tr>
@@ -26,8 +15,6 @@
   </tbody>
 </table>
 
-<%= link_to 'edit_permission', edit_permissions_document_path(@document) %>
-
 <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#add-enrollment-modal">Give edit permission to user</button>
 
 <div id="add-enrollment-modal" class="modal fade" role="dialog">
@@ -39,7 +26,7 @@
       </div>
       <div class="modal-body">
         <div class="field form-group" id= "ajax-form">
-          <!--<%= render 'edit_permissions/form', document: @document, edit_permission: EditPermission.new %>-->
+          <%= render 'edit_permissions/form', document: @document, edit_permission: EditPermission.new %>
         </div>
       </div>
       <div class="modal-footer">
@@ -48,6 +35,3 @@
     </div>
   </div>
 </div>
-
-<%= link_to 'Edit', edit_document_path(@document), {:class => "btn btn-primary"} %> |
-<%= link_to 'Back', documents_path, {:class => "btn btn-default"} %>
