--- a/proyecto/app/views/documents/show.html.erb
+++ b/proyecto/app/views/documents/show.html.erb
@@ -14,32 +14,66 @@
   <thead>
     <tr>
       <th>Users with edit permission</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @users_permited_to_edit.each do |user| %>
+    <% @edit_permissions.each do |edit_permission| %>
       <tr>
-        <td><%= user.to_s %></td>
+        <td><%= edit_permission.permited_to_edit_user.to_s %></td>
+        <% if @is_user_signed_in %>
+        <td><%= link_to 'Destroy', edit_permission_path(edit_permission), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'edit_permission', edit_permissions_document_path(@document) %>
 
+<% if @is_user_signed_in and @has_current_user_edit_permission %>
 <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#add-enrollment-modal">Give edit permission to user</button>
+<% end %>
 
 <div id="add-enrollment-modal" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Give edit permission to user</h4>
+        <h4 class="modal-title">Give edit permissions to user</h4>
       </div>
       <div class="modal-body">
-        <div class="field form-group" id= "ajax-form">
-          <!--<%= render 'edit_permissions/form', document: @document, edit_permission: EditPermission.new %>-->
+        <div class="field form-group">
+          <%= form_for(@edit_permission) do |f| %>
+            <% if @edit_permission.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(@edit_permission.errors.count, "error") %> prohibited this edit_permission from being saved:</h2>
+
+                <ul>
+                <% @edit_permission.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="field form-group">
+              <%= f.hidden_field :document_id, :value => @document.id %>
+
+              <%= f.label :users_id %>
+              <% users_ids = @document.permited_to_edit_users.pluck(:id) %>
+              <% if users_ids.length > 0 %>
+                <% missing_users = User.where('id NOT IN (?)', @document.permited_to_edit_users.pluck(:id)) %>
+              <% else %>
+                <% missing_users = User.all %>
+              <% end %>
+              <%= f.select :permited_to_edit_user, options_for_select(missing_users.all.map{|s|[s.to_s, s.id]}), {}, class: 'form-control' %>
+            </div>
+
+            <div class="actions form-group">
+              <%= f.submit class: 'btn btn-primary' %>
+            </div>
+          <% end %>
         </div>
       </div>
       <div class="modal-footer">
