--- a/proyecto/app/views/layouts/application.html.erb
+++ b/proyecto/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
             <% end %>
       			<%= link_to 'Categories', categories_path, class: 'navbar-brand' %>
             <%= link_to 'Documents', documents_path, class: 'navbar-brand' %>
+            <%= link_to 'My Documents', documents_path(:show_editable_documents => true), class: 'navbar-brand' %>
             <%= link_to 'Categories Documents', categories_documents_path, class: 'navbar-brand' %>
 
           </div>
