--- a/proyecto/app/views/categories/index.html.erb
+++ b/proyecto/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Categories</h1>
 
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
@@ -24,4 +24,3 @@
 
 <br>
 <%= link_to 'New Category', new_category_path, {:class => "btn btn-success"} %>
-
