--- a/proyecto/app/views/documents/_form.html.erb
+++ b/proyecto/app/views/documents/_form.html.erb
@@ -11,22 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="form">
+    <%= f.label :title, class: 'form-group'%>
+    <%= f.text_field :title, class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :text %>
-    <%= f.text_area :text %>
+    <%= f.label :text, class: 'form-group'%>
+    <%= f.text_area :text, class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :public %>
-    <%= f.check_box :public %>
+    <%= f.label :public, class: 'form-group'%>
+    <%= f.check_box :public%>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Submit, class: 'btn btn-success'%>
   </div>
 <% end %>
