--- a/proyecto/app/views/edit_permissions/edit.html.erb
+++ b/proyecto/app/views/edit_permissions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', edit_permission: @edit_permission %>
 
-<%= link_to 'Show', @edit_permission %> |
-<%= link_to 'Back', edit_permissions_path %>
+<%= link_to 'Show', @edit_permission, {:class => "btn btn-primary"} %> 
+<%= link_to 'Back', edit_permissions_path, {:class => "btn btn-danger"} %>
