--- a/proyecto/app/views/edit_permissions/index.html.erb
+++ b/proyecto/app/views/edit_permissions/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Edit Permissions</h1>
 
-<table>
+<table class ="table table-striped">
   <thead>
     <tr>
       <th>Document</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Edit Permission', new_edit_permission_path %>
+<%= link_to 'New Edit Permission', new_edit_permission_path, {:class => "btn btn-success"} %>
