--- a/proyecto/app/views/edit_permissions/new.html.erb
+++ b/proyecto/app/views/edit_permissions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', edit_permission: @edit_permission %>
 
-<%= link_to 'Back', edit_permissions_path %>
+<%= link_to 'Back', edit_permissions_path, {:class => "btn btn-danger"} %>
