--- a/proyecto/app/views/layouts/application.html.erb
+++ b/proyecto/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               <div class="form-group">
                 <input type="text" class="form-control" name="title" placeholder="Search" value="<%= params[:title] %>">
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="submit" class="btn btn-info active">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
