--- a/proyecto/app/views/categories/_form.html.erb
+++ b/proyecto/app/views/categories/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.label :title , class: 'form-group'%>
+    <%= f.text_field :title, class: 'form-control'%>
   </div>
 
   <div class="actions">
-    <%= f.submit%>
+    <%= f.submit "Submit", class: 'btn btn-success' %>
   </div>
 <% end %>
