--- a/proyecto/app/views/categories_documents/_form.html.erb
+++ b/proyecto/app/views/categories_documents/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :category_id %>
-    <%= f.select :category_id, options_for_select(Category.all.map{|s|[s.title, s.id]}) %>
+    <%= f.label :category_id , class: 'form-group'%>
+    <%= f.select :category_id, options_for_select(Category.all.map{|s|[s.title, s.id]}) , class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :document_id %>
-    <%= f.select :document_id, options_for_select(Document.all.map{|s|[s.title, s.id]}) %>
+    <%= f.label :document_id , class: 'form-group'%>
+    <%= f.select :document_id, options_for_select(Document.all.map{|s|[s.title, s.id]}) , class: 'form-control'%>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Submit, class: 'btn btn-success'%>
   </div>
 <% end %>
