--- a/proyecto/app/views/devise/confirmations/new.html.erb
+++ b/proyecto/app/views/devise/confirmations/new.html.erb
@@ -4,12 +4,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email , class: 'form-group'%><br />
     <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <%= f.submit "Resend confirmation instructions" , class: 'btn btn-success'%>
   </div>
 <% end %>
 
