--- a/proyecto/app/views/devise/passwords/new.html.erb
+++ b/proyecto/app/views/devise/passwords/new.html.erb
@@ -4,12 +4,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email , class: 'form-group'%><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions", class: 'btn btn-success'%>
   </div>
 <% end %>
 
