--- a/proyecto/app/views/devise/registrations/new.html.erb
+++ b/proyecto/app/views/devise/registrations/new.html.erb
@@ -4,23 +4,23 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+    <%= f.label :first_name , class: 'form-group'%><br />
+    <%= f.text_field :first_name , class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+    <%= f.label :last_name , class: 'form-group'%><br />
+    <%= f.text_field :last_name , class: 'form-control'%>
   </div>
 
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email , class: 'form-group'%><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password , class: 'form-group'%>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -28,12 +28,12 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation , class: 'form-group'%><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: 'btn btn-success'%>
   </div>
 <% end %>
 
