--- a/proyecto/app/views/documents/show.html.erb
+++ b/proyecto/app/views/documents/show.html.erb
@@ -83,5 +83,5 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_document_path(@document), {:class => "btn btn-primary"} %> |
+<%= link_to 'Edit', edit_document_path(@document), {:class => "btn btn-primary"} %> 
 <%= link_to 'Back', documents_path, {:class => "btn btn-danger"} %>
