--- a/proyecto/app/views/edit_permissions/_form.html.erb
+++ b/proyecto/app/views/edit_permissions/_form.html.erb
@@ -12,17 +12,16 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :document_id %>
-    <%= f.text_field :document_id, class: "form-control" %>
+    <%= f.label :document_id , class: 'form-group'%>
+    <%= f.text_field :document_id, class: 'form-control'%>
   </div>
 
   <div class="form-group">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id, class: "form-control" %>
+    <%= f.label :user_id , class: 'form-group'%>
+    <%= f.text_field :user_id, class: 'form-control'%>
   </div>
 
   <div class="actions">
     <%= f.submit nil, class: 'btn btn-success' %>
-  </div>.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
