--- a/proyecto/app/views/users/_form.html.erb
+++ b/proyecto/app/views/users/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+    <%= f.label :first_name, class: 'form-group'%>
+    <%= f.text_field :first_name, class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
+    <%= f.label :last_name, class: 'form-group'%>
+    <%= f.text_field :last_name, class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.label :email , class: 'form-group'%>
+    <%= f.text_field :email, class: 'form-control'%>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Submit, class: 'btn btn-success'%>
   </div>
 <% end %>
