some final details in editable documents

--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -22,8 +22,10 @@
             <td><%= markdown(document.text).html_safe %></td>
           <% end %>
           <td><%= link_to 'Show', document %></td>
-          <td><%= link_to 'Edit', edit_document_path(document) %></td>
-          <td><%= link_to 'Destroy', document, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if @show_editable_documents %>
+            <td><%= link_to 'Edit', edit_document_path(document) %></td>
+            <td><%= link_to 'Destroy', document, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
         <% end %>
     <% end %>
