--- a/proyecto/app/views/layouts/application.html.erb
+++ b/proyecto/app/views/layouts/application.html.erb
@@ -11,22 +11,13 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
+        <div>
+          <div>
             <%= link_to content_tag("span", "", :class => 'glyphicon glyphicon-home'), root_path, class: 'navbar-brand' %>
-            <%= link_to 'Categories', categories_path, class: 'navbar-brand' %>
-            <%= link_to 'Documents', documents_path, class: 'navbar-brand' %>
-            <%= link_to 'My Documents', documents_path(:show_editable_documents => true), class: 'navbar-brand' %>
-            <%= link_to 'Categories Documents', categories_documents_path, class: 'navbar-brand' %>
-
+            <%= link_to 'Categories', categories_path, class: 'navbar-text' %>
+            <%= link_to 'Documents', documents_path, class: 'navbar-text' %>
+            <%= link_to 'My Documents', documents_path(:show_editable_documents => true), class: 'navbar-text' %>
+            <%= link_to 'Categories Documents', categories_documents_path, class: 'navbar-text' %>
           </div>
           <div class="container-fluid">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -41,9 +32,13 @@
               <div>
                 <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
-                  Logged in as <strong><%= current_user.email %></strong>.
+                <div>
                   <%= link_to content_tag("span", " Edit profile", :class => 'glyphicon glyphicon-edit'), edit_user_registration_path, :class => 'navbar-link' %> |
                   <%= link_to content_tag("span", " Log out", :class => 'glyphicon glyphicon-log-out'), destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+                </div>
+                <div>
+                  Logged in as <strong><%= current_user.email %></strong>.
+                </div>
                 <% else %>
                   <%= link_to content_tag("span", " Sign up", :class => 'glyphicon glyphicon-user'), new_user_registration_path, :class => 'navbar-link' %> |
                   <%= link_to content_tag("span", " Login", :class => 'glyphicon glyphicon-log-in'), new_user_session_path, :class => 'navbar-link'  %>
