--- a/proyecto/app/views/categories/index.html.erb
+++ b/proyecto/app/views/categories/index.html.erb
@@ -12,9 +12,9 @@
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.title %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', category, {:class => "btn btn-info"}%></td>
+        <td><%= link_to 'Edit', edit_category_path(category), {:class => "btn btn-success"} %></td>
+        <td><%= link_to 'Destroy', category, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
