--- a/proyecto/app/views/users/index.html.erb
+++ b/proyecto/app/views/users/index.html.erb
@@ -16,9 +16,9 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user, {:class => "btn btn-info"} %></td>
+        <td><%= link_to 'Edit', edit_user_path(user), {:class => "btn btn-success"} %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure?' }%></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, {:class => "btn btn-primary"} %>
