--- a/proyecto/app/views/users/show.html.erb
+++ b/proyecto/app/views/users/show.html.erb
@@ -13,5 +13,5 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), {:class => "btn btn-success"} %> |
+<%= link_to 'Back', users_path, {:class => "btn btn-danger"} %>
