--- a/proyecto/app/views/categories/index.html.erb
+++ b/proyecto/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th colspan="115"></th>
     </tr>
   </thead>
 
@@ -12,9 +12,11 @@
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.title %></td>
-        <td><%= link_to 'Show', category, {:class => "btn btn-info"}%></td>
-        <td><%= link_to 'Edit', edit_category_path(category), {:class => "btn btn-success"} %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', category, {:class => "btn btn-info"}%>
+          <%= link_to 'Edit', edit_category_path(category), {:class => "btn btn-success"} %>
+          <%= link_to 'Destroy', category, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
