--- a/proyecto/app/views/documents/_form.html.erb
+++ b/proyecto/app/views/documents/_form.html.erb
@@ -30,7 +30,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit %>
+          <%= f.submit nil, class: 'btn btn-success' %>
         </div>
       <% end %>
     </div>
