--- a/proyecto/app/views/categories/edit.html.erb
+++ b/proyecto/app/views/categories/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Category</h1>
 
 <%= render 'form', category: @category %>
-
-<%= link_to 'Show', @category, {:class => "btn btn-primary"} %> |
+<%= link_to 'Show', @category, {:class => "btn btn-primary"} %>
 <%= link_to 'Back', categories_path, {:class => "btn btn-danger"} %>
