--- a/proyecto/app/views/categories_documents/index.html.erb
+++ b/proyecto/app/views/categories_documents/index.html.erb
@@ -14,9 +14,11 @@
       <tr>
         <td><%= categories_document.category.title %></td>
         <td><%= categories_document.document.title %></td>
-        <td><%= link_to 'Show', categories_document, {:class => "btn btn-info"} %></td>
-        <td><%= link_to 'Edit', edit_categories_document_path(categories_document), {:class => "btn btn-success"} %></td>
-        <td><%= link_to 'Destroy', categories_document, method: :delete, class: "btn btn-danger" ,data: { confirm: 'Are you sure?' }%></td>
+        <td>
+          <%= link_to 'Show', categories_document, {:class => "btn btn-info"} %>
+          <%= link_to 'Edit', edit_categories_document_path(categories_document), {:class => "btn btn-success"} %>
+          <%= link_to 'Destroy', categories_document, method: :delete, class: "btn btn-danger" ,data: { confirm: 'Are you sure?' }%>
+        </td>
       </tr>
     <% end %>
   </tbody>
