--- a/proyecto/app/views/documents/edit.html.erb
+++ b/proyecto/app/views/documents/edit.html.erb
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<%= link_to 'Show', @document, {:class => "btn btn-primary"} %> |
+<%= link_to 'Show', @document, {:class => "btn btn-primary"} %>
 <%= link_to 'Back', documents_path, {:class => "btn btn-danger"} %>
 
 <script>
