--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -6,7 +6,7 @@
       <th>Title</th>
       <th>Public</th>
       <th>Text</th>
-      <th colspan="3"></th>
+      <th colspan="115"></th>
     </tr>
   </thead>
 
@@ -21,11 +21,13 @@
           <% else %>
             <td><%= markdown(document.text).html_safe %></td>
           <% end %>
-          <td><%= link_to 'Show', document, {:class => "btn btn-info"} %></td>
-          <% if @show_editable_documents %>
-            <td><%= link_to 'Edit', edit_document_path(document), {:class => "btn btn-success"} %></td>
-            <td><%= link_to 'Destroy', document, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' }%></td>
+          <td>
+            <%= link_to 'Show', document, {:class => "btn btn-info"} %>
+            <% if @show_editable_documents %>
+              <%= link_to 'Edit', edit_document_path(document), {:class => "btn btn-success"} %>
+              <%= link_to 'Destroy', document, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' }%>
           <% end %>
+          </td>
         </tr>
         <% end %>
     <% end %>
