agregado cambiar colores brand

--- a/proyecto/app/assets/stylesheets/application.scss
+++ b/proyecto/app/assets/stylesheets/application.scss
@@ -12,6 +12,11 @@
  * @import to import Sass files.
  */
  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+ $brand-warning:     #428bda;
+ $brand-info:        #428bcf;
+ $brand-primary:     #779EC7;
+ $brand-danger:      #BF4C36;
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
@@ -23,16 +28,3 @@
 #document-text {
   height: auto;
 }
-
-@gray-base:         #000;
-@gray-darker:       lighten(@gray-base, 13.5%); // #222
-@gray-dark:         lighten(@gray-base, 20%);   // #333
-@gray:              lighten(@gray-base, 33.5%); // #555
-@gray-light:        lighten(@gray-base, 46.7%); // #777
-@gray-lighter:      lighten(@gray-base, 93.5%); // #eee
-
-$brand-primary:     #428bca;
-@brand-success:     #5cb85c;
-@brand-info:        #5bc0de;
-@brand-warning:     #f0ad4e;
-@brand-danger:      #d9534f;
