--- a/proyecto/app/views/documents/index.html.erb
+++ b/proyecto/app/views/documents/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Documents</h1>
 
-<table class ="table table-striped">
+<table class ="table table-bordered">
   <thead>
     <tr>
       <th>Title</th>
